manifests/whoami/resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: web
  name: whoami-deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
        app.kubernetes.io/component: web
    spec:
      containers:
        - image: docker.io/traefik/whoami:v1.10.2
          ports:
            - name: web
              containerPort: 80
          name: whoami
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      app.kubernetes.io/component: web
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: web
  name: whoami-service
spec:
  ports:
    - port: 80
      name: web
      targetPort: 80
  selector:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoami.durbin.casa
    cert-manager.io/cluster-issuer: cloudflare-issuer
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: web
  name: whoami-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.durbin.casa
      http:
        paths:
          - path: /
            backend:
              service:
                port:
                  name: web
                name: whoami-service
            pathType: Prefix
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - whoami.durbin.casa
